testsuite/tests/explicit-dicts/should_fail/RoleNom.stderr

RoleNom.hs:14:15: error:
    • Explicit dictionary application not allowed
    • In the expression: method inst
      In an equation for ‘explicitApp’: explicitApp = method inst
